Prevent text from being too long

--- a/src/components/HeaderMenu/HeaderMenu.module.css
+++ b/src/components/HeaderMenu/HeaderMenu.module.css
@@ -208,6 +208,7 @@
 
 .mobileNavBodyProfileInfo {
   display: flex;
+  width: 70%;
   flex-direction: column;
   justify-content: center;
 }
@@ -216,6 +217,7 @@
   font-size: 17px;
   font-weight: 500;
   display: -webkit-box;
+  word-break: break-all;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
